added honeypot spam filter

--- a/src/index.html
+++ b/src/index.html
@@ -186,36 +186,39 @@ eleventyNavigation:
             <h4 class="cs-text">Fill out your info and we'll reach out to schedule a free rental evaluation.</h4>
         </div>
         <!--Form-->
-        <form class="cs-form" id="cs-form-983" name="Rental Consultation Form" method="post" netlify>
-            <label class="cs-label">
-                First Name
-                <input class="cs-input" required type="text" id="name-587-983" name="First Name" placeholder="First Name">
-            </label>
-            <label class="cs-label">
-                Last Name
-                <input class="cs-input" required type="text" id="name-587-983" name="Last Name" placeholder="Last Name">
-            </label>
-            <label class="cs-label">
-                Email
-                <input class="cs-input" required type="text" id="email-587-983" name="email" placeholder="Email">
-            </label>
-            <label class="cs-label">
-                Phone Number
-                <input class="cs-input" required type="text" id="phone-587-983" name="phone" placeholder="Enter Your Phone Number">
-            </label>
-            <label class="cs-label">
-            </br>
-                Property Address
-                <input class="cs-input" required type="text" id="address-587-983" name="Property Address" placeholder="Your Property Address">
-            </label>
-            <label class="cs-label cs-message">
-                Tell Us About Your Property
-                <textarea class="cs-input cs-textarea" required name="Address" id="message-587-983" placeholder="Tell Us About Your Property"></textarea>
-            </label>
-            <div class="cs-wrapper">
-                <button class="cs-button-solid cs-submit" type="submit">Send Message</button>
-            </div>
-        </form>
+<form class="cs-form" id="cs-form-983" name="Rental Consultation Form" method="post" netlify netlify-honeypot="bot-field">
+    <!-- Honeypot field (hidden from users) -->
+    <input type="text" name="bot-field" style="display:none" tabindex="-1" autocomplete="off">
+
+    <label class="cs-label">
+        First Name
+        <input class="cs-input" required type="text" id="name-587-983" name="First Name" placeholder="First Name">
+    </label>
+    <label class="cs-label">
+        Last Name
+        <input class="cs-input" required type="text" id="name-587-983" name="Last Name" placeholder="Last Name">
+    </label>
+    <label class="cs-label">
+        Email
+        <input class="cs-input" required type="text" id="email-587-983" name="email" placeholder="Email">
+    </label>
+    <label class="cs-label">
+        Phone Number
+        <input class="cs-input" required type="text" id="phone-587-983" name="phone" placeholder="Enter Your Phone Number">
+    </label>
+    <label class="cs-label">
+    </br>
+        Property Address
+        <input class="cs-input" required type="text" id="address-587-983" name="Property Address" placeholder="Your Property Address">
+    </label>
+    <label class="cs-label cs-message">
+        Tell Us About Your Property
+        <textarea class="cs-input cs-textarea" required name="Address" id="message-587-983" placeholder="Tell Us About Your Property"></textarea>
+    </label>
+    <div class="cs-wrapper">
+        <button class="cs-button-solid cs-submit" type="submit">Send Message</button>
+    </div>
+</form>
     </div>
     <!--Background Image-->
     <picture class="cs-background">
