--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -22,33 +22,37 @@ permalink: 'contact/'
 <section id="contact-1333">
     <div class="cs-container">
         <!--Form-->
-        <form class="cs-form" id="cs-form-1333" name="Contact Form" method="post" netlify>
-            <div class="cs-content">
-                <span class="cs-topper">Contact Us</span>
-                <h2 class="cs-title">Get In Touch</h2>
-            </div>
-            <label class="cs-label">
-                First Name
-                <input class="cs-input" required type="text" id="name-1333" name="Fname" placeholder="First Name">
-            </label>
-            <label class="cs-label">
-                Last Name
-                <input class="cs-input" required type="text" id="name-1333" name="Lname" placeholder="Last Name">
-            </label>
-            <label class="cs-label cs-email">
-                Email
-                <input class="cs-input" required type="email" id="email-1333" name="email" placeholder="Email">
-            </label>
-            <label class="cs-label cs-phone">
-                Phone
-                <input class="cs-input" required type="number" id="phone-1333" name="phone" placeholder="Phone">
-            </label>
-            <label class="cs-label">
-                Message
-                <textarea class="cs-input cs-textarea" required name="Message" id="message-1333" placeholder="Write message..."></textarea>
-            </label>
-            <button class="cs-button-solid cs-submit" type="submit">Submit Message</button>
-        </form>
+<form class="cs-form" id="cs-form-1333" name="Contact Form" method="post" netlify netlify-honeypot="bot-field">
+    <!-- Honeypot field (hidden from users) -->
+    <input type="text" name="bot-field" style="display:none" tabindex="-1" autocomplete="off">
+
+    <div class="cs-content">
+        <span class="cs-topper">Contact Us</span>
+        <h2 class="cs-title">Get In Touch</h2>
+    </div>
+    <label class="cs-label">
+        First Name
+        <input class="cs-input" required type="text" id="name-1333" name="Fname" placeholder="First Name">
+    </label>
+    <label class="cs-label">
+        Last Name
+        <input class="cs-input" required type="text" id="name-1333" name="Lname" placeholder="Last Name">
+    </label>
+    <label class="cs-label cs-email">
+        Email
+        <input class="cs-input" required type="email" id="email-1333" name="email" placeholder="Email">
+    </label>
+    <label class="cs-label cs-phone">
+        Phone
+        <input class="cs-input" required type="number" id="phone-1333" name="phone" placeholder="Phone">
+    </label>
+    <label class="cs-label">
+        Message
+        <textarea class="cs-input cs-textarea" required name="Message" id="message-1333" placeholder="Write message..."></textarea>
+    </label>
+    <button class="cs-button-solid cs-submit" type="submit">Submit Message</button>
+</form>
+
         <div class="cs-content">
             <span class="cs-topper">Asked Questions</span>
             <h2 class="cs-title">Frequently Asked Questions</h2>
