--- a/src/index.html
+++ b/src/index.html
@@ -213,7 +213,7 @@ eleventyNavigation:
     </label>
     <label class="cs-label cs-message">
         Tell Us About Your Property
-        <textarea class="cs-input cs-textarea" required name="Address" id="message-587-983" placeholder="Tell Us About Your Property"></textarea>
+        <textarea class="cs-input cs-textarea" name="Tell Us About Your Property" id="message-587-983" placeholder="Tell Us About Your Property"></textarea>
     </label>
     <div class="cs-wrapper">
         <button class="cs-button-solid cs-submit" type="submit">Send Message</button>
