fixed contact form names

--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -32,19 +32,19 @@ permalink: 'contact/'
     </div>
     <label class="cs-label">
         First Name
-        <input class="cs-input" required type="text" id="name-1333" name="Fname" placeholder="First Name">
+        <input class="cs-input" required type="text" id="name-1333" name="First Name" placeholder="First Name">
     </label>
     <label class="cs-label">
         Last Name
-        <input class="cs-input" required type="text" id="name-1333" name="Lname" placeholder="Last Name">
+        <input class="cs-input" required type="text" id="name-1333" name="Last Name" placeholder="Last Name">
     </label>
     <label class="cs-label cs-email">
         Email
-        <input class="cs-input" required type="email" id="email-1333" name="email" placeholder="Email">
+        <input class="cs-input" required type="email" id="email-1333" name="Email" placeholder="Email">
     </label>
     <label class="cs-label cs-phone">
         Phone
-        <input class="cs-input" required type="number" id="phone-1333" name="phone" placeholder="Phone">
+        <input class="cs-input" required type="number" id="phone-1333" name="Phone" placeholder="Phone">
     </label>
     <label class="cs-label">
         Message
