--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -22,7 +22,10 @@ permalink: 'contact/'
 <section id="contact-1333">
     <div class="cs-container">
         <!--Form-->
-<form class="cs-form" id="cs-form-1333" name="Contact Form" method="post" netlify>
+<form class="cs-form" id="cs-form-1333" name="Contact Form" method="post" netlify netlify-honeypot="bot-field">
+    <!-- Honeypot field (hidden from users) -->
+    <input type="text" name="bot-field" style="display:none" tabindex="-1" autocomplete="off">
+
     <div class="cs-content">
         <span class="cs-topper">Contact Us</span>
         <h2 class="cs-title">Get In Touch</h2>
@@ -47,14 +50,8 @@ permalink: 'contact/'
         Message
         <textarea class="cs-input cs-textarea" required name="Message" id="message-1333" placeholder="Write message..."></textarea>
     </label>
-    <!-- reCAPTCHA widget here -->
-    <div class="g-recaptcha" data-sitekey="6Ldx6IMrAAAAAHrivtIWZgEkpgS2CWTiXrwOdxW8"></div>
     <button class="cs-button-solid cs-submit" type="submit">Submit Message</button>
 </form>
-
-<!-- Add this script before your closing </body> tag -->
-<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-
 
         <div class="cs-content">
             <span class="cs-topper">Asked Questions</span>
