--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -22,7 +22,7 @@ permalink: 'contact/'
 <section id="contact-1333">
     <div class="cs-container">
         <!--Form-->
-<form class="cs-form" id="cs-form-1333" name="Contact Form" method="post" netlify netlify-honeypot="bot-field">
+<form class="cs-form" id="cs-form-1333" name="Contact Form" method="post" netlify-honeypot="bot-field">
     <!-- Honeypot field (hidden from users) -->
     <input type="text" name="bot-field" style="display:none" tabindex="-1" autocomplete="off">
 
@@ -30,6 +30,13 @@ permalink: 'contact/'
         <span class="cs-topper">Contact Us</span>
         <h2 class="cs-title">Get In Touch</h2>
     </div>
+
+      <p class="hidden">
+    <label>
+      Don’t fill this out if you’re human: <input name="bot-field" />
+    </label>
+  </p>
+
     <label class="cs-label">
         First Name
         <input class="cs-input" required type="text" id="name-1333" name="First Name" placeholder="First Name">
@@ -50,6 +57,7 @@ permalink: 'contact/'
         Message
         <textarea class="cs-input cs-textarea" required name="Message" id="message-1333" placeholder="Write message..."></textarea>
     </label>
+      <div data-netlify-recaptcha="true"></div>
     <button class="cs-button-solid cs-submit" type="submit">Submit Message</button>
 </form>
 
