--- a/src/index.html
+++ b/src/index.html
@@ -186,10 +186,15 @@ eleventyNavigation:
             <h4 class="cs-text">Fill out your info and we'll reach out to schedule a free rental evaluation.</h4>
         </div>
         <!--Form-->
-<form class="cs-form" id="cs-form-983" name="Rental Consultation Form" method="post" netlify netlify-honeypot="bot-field">
+<form class="cs-form" id="cs-form-983" name="Rental Consultation Form" method="post" netlify-honeypot="bot-field" data-netlify-recaptcha="true">
     <!-- Honeypot field (hidden from users) -->
     <input type="text" name="bot-field" style="display:none" tabindex="-1" autocomplete="off">
 
+      <p class="hidden">
+    <label>
+      Don’t fill this out if you’re human: <input name="bot-field" />
+    </label>
+  </p>
     <label class="cs-label">
         First Name
         <input class="cs-input" required type="text" id="name-587-983" name="First Name" placeholder="First Name">
@@ -215,6 +220,7 @@ eleventyNavigation:
         Tell Us About Your Property
         <textarea class="cs-input cs-textarea" name="Tell Us About Your Property" id="message-587-983" placeholder="Tell Us About Your Property"></textarea>
     </label>
+      <div data-netlify-recaptcha="true"></div>
     <div class="cs-wrapper">
         <button class="cs-button-solid cs-submit" type="submit">Send Message</button>
     </div>
