corrected spam filters

--- a/src/index.html
+++ b/src/index.html
@@ -186,7 +186,7 @@ eleventyNavigation:
             <h4 class="cs-text">Fill out your info and we'll reach out to schedule a free rental evaluation.</h4>
         </div>
         <!--Form-->
-<form class="cs-form" id="cs-form-983" name="Rental Consultation Form" method="post" netlify-honeypot="bot-field" data-netlify-recaptcha="true">
+<form class="cs-form" id="cs-form-983" name="Rental Consultation Form" method="post" data-netlify-recaptcha="true">
     <!-- Honeypot field (hidden from users) -->
     <input type="text" name="bot-field" style="display:none" tabindex="-1" autocomplete="off">
 
