--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -22,7 +22,7 @@ permalink: 'contact/'
 <section id="contact-1333">
     <div class="cs-container">
         <!--Form-->
-<form class="cs-form" id="cs-form-1333" name="Contact Form" method="post" netlify-honeypot="bot-field">
+<form class="cs-form" id="cs-form-1333" name="Contact Form" method="post" data-netlify-recaptcha="true">
     <!-- Honeypot field (hidden from users) -->
     <input type="text" name="bot-field" style="display:none" tabindex="-1" autocomplete="off">
 
@@ -30,13 +30,6 @@ permalink: 'contact/'
         <span class="cs-topper">Contact Us</span>
         <h2 class="cs-title">Get In Touch</h2>
     </div>
-
-      <p class="hidden">
-    <label>
-      Don’t fill this out if you’re human: <input name="bot-field" />
-    </label>
-  </p>
-
     <label class="cs-label">
         First Name
         <input class="cs-input" required type="text" id="name-1333" name="First Name" placeholder="First Name">
