--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -22,7 +22,12 @@ permalink: 'contact/'
 <section id="contact-1333">
     <div class="cs-container">
         <!--Form-->
-<form class="cs-form" id="cs-form-1333" name="Contact Form" method="post" data-netlify-recaptcha="true">
+<form class="cs-form" id="cs-form-1333" name="Contact Form" 
+      action="/submission-complete/" 
+      method="post" 
+      data-netlify="true" 
+      data-netlify-recaptcha="true">
+    <input type="hidden" name="form-name" value="Contact Form">
     <div class="cs-content">
         <span class="cs-topper">Contact Us</span>
         <h2 class="cs-title">Get In Touch</h2>
@@ -47,7 +52,7 @@ permalink: 'contact/'
         Message
         <textarea class="cs-input cs-textarea" required name="Message" id="message-1333" placeholder="Write message..."></textarea>
     </label>
-      <div data-netlify-recaptcha="true"></div>
+    <div data-netlify-recaptcha="true"></div>
     <button class="cs-button-solid cs-submit" type="submit">Submit Message</button>
 </form>
 
