fixed required type for contact page

--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -46,7 +46,7 @@ permalink: 'contact/'
     </label>
     <label class="cs-label cs-phone">
         Phone
-        <input class="cs-input" required type="number" id="phone-1333" name="Phone" placeholder="Phone">
+        <input class="cs-input" required type="text" id="phone-1333" name="Phone" placeholder="Phone">
     </label>
     <label class="cs-label">
         Message
