change form names

--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@ eleventyNavigation:
     </label>
     <label class="cs-label">
         Email
-        <input class="cs-input" required type="text" id="email-587-983" name="email" placeholder="Email">
+        <input class="cs-input" required type="text" id="email-587-983" name="Email" placeholder="Email">
     </label>
     <label class="cs-label">
         Phone Number
@@ -213,11 +213,11 @@ eleventyNavigation:
     <label class="cs-label">
         </br>
         Property Address
-        <input class="cs-input" required type="text" id="address-587-983" name="Property Address" placeholder="Your Property Address">
+        <input class="cs-input" required type="text" id="address-587-983" name="Address" placeholder="Your Property Address">
     </label>
     <label class="cs-label cs-message">
         Tell Us About Your Property
-        <textarea class="cs-input cs-textarea" name="Tell Us About Your Property" id="message-587-983" placeholder="Tell Us About Your Property"></textarea>
+        <textarea class="cs-input cs-textarea" name="Message" id="message-587-983" placeholder="Tell Us About Your Property"></textarea>
     </label>
     <div data-netlify-recaptcha="true"></div>
     <div class="cs-wrapper">
