--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -190,37 +190,44 @@ eleventyNavigation:
             <h4 class="cs-text">Fill out your info and we'll reach out to schedule a free rental evaluation.</h4>
         </div>
         <!--Form-->
-        <form class="cs-form" id="cs-form-983" name="Rental Consultation Form" method="post" netlify>
-            <label class="cs-label">
-                First Name
-                <input class="cs-input" required type="text" id="name-587-983" name="First Name" placeholder="First Name">
-            </label>
-            <label class="cs-label">
-                Last Name
-                <input class="cs-input" required type="text" id="name-587-983" name="Last Name" placeholder="Last Name">
-            </label>
-            <label class="cs-label">
-                Email
-                <input class="cs-input" required type="text" id="email-587-983" name="email" placeholder="Email">
-            </label>
-            <label class="cs-label">
-                Phone Number
-                <input class="cs-input" required type="text" id="phone-587-983" name="phone" placeholder="Enter Your Phone Number">
-            </label>
-            <label class="cs-label">
-            </br>
-                Property Address
-                <input class="cs-input" required type="text" id="address-587-983" name="Property Address" placeholder="Your Property Address">
-            </label>
-            <label class="cs-label cs-message">
-                Tell Us About Your Property
-                <textarea class="cs-input cs-textarea" required name="Address" id="message-587-983" placeholder="Tell Us About Your Property"></textarea>
-            </label>
-            <div class="cs-wrapper">
-                <button class="cs-button-solid cs-submit" type="submit">Send Message</button>
-            </div>
-        </form>
+<form class="cs-form" id="cs-form-983" name="Property Management Inquiry Form"
+      method="post"
+      action="/submission-complete/"
+      data-netlify="true"
+      data-netlify-recaptcha="true">
+
+    <input type="hidden" name="form-name" value="Property Management Inquiry Form">
+
+    <label class="cs-label">
+        First Name
+        <input class="cs-input" required type="text" id="name-587-983" name="first_name" placeholder="First Name">
+    </label>
+    <label class="cs-label">
+        Last Name
+        <input class="cs-input" required type="text" id="name-587-983" name="last_name" placeholder="Last Name">
+    </label>
+    <label class="cs-label">
+        Email
+        <input class="cs-input" required type="text" id="email-587-983" name="email" placeholder="Email">
+    </label>
+    <label class="cs-label">
+        Phone Number
+        <input class="cs-input" required type="text" id="phone-587-983" name="phone" placeholder="Enter Your Phone Number">
+    </label>
+    <label class="cs-label">
+        </br>
+        Property Address
+        <input class="cs-input" required type="text" id="address-587-983" name="address" placeholder="Your Property Address">
+    </label>
+    <label class="cs-label cs-message">
+        Tell Us About Your Property
+        <textarea class="cs-input cs-textarea" name="message" id="message-587-983" placeholder="Tell Us About Your Property"></textarea>
+    </label>
+    <div data-netlify-recaptcha="true"></div>
+    <div class="cs-wrapper">
+        <button class="cs-button-solid cs-submit" type="submit">Send Message</button>
     </div>
+</form>    </div>
     <!--Background Image-->
     <picture class="cs-background">
         <!--Mobile Image-->
