added rental criteria

--- a/src/content/pages/rentals.html
+++ b/src/content/pages/rentals.html
@@ -18,8 +18,37 @@ eleventyNavigation:
 {% block body %}
 
 {% include 'components/banner.html' %}
+        
+<!--                   
+    This is a cs-content section that you can swap out with any cs-content you have in your site that is not a Side By Side. 
+-->
 
+<div id="cs-content-831">
+    <h2 class="cs-title">Attention Realtors</h2>
+    <h3 class="cs-text">
+We will compensate you for bringing us a tenant! These are our minimum rental requirements. Please note that some owners of individual properties may have slighlty different reqiurements
 
+    </h3>
+        <p class="cs-text">
+Credit score of at least 625
+    </p>
+            <p class="cs-text">
+Monthly income of at least 3x the monthly rent
+    </p>
+            <p class="cs-text">
+Currently employed for at least 12 months    </p>
+            <p class="cs-text">
+No prior evictions or landlord judgments    </p>
+       <p class="cs-text">
+No open bankruptcy’s    </p>
+     <p class="cs-text">
+Positive rental reference if applicable    </p>
+<p class="cs-text">
+No Cats    </p>
+<p class="cs-text">
+No Smoking    </p>
+</div>
+                                
 <script type='text/javascript' charset='utf-8'>
     document.write(unescape("%3Cscript src='" + (('https:' == document.location.protocol) ? 'https:' : 'http:') + "//sunseeker.appfolio.com/javascripts/listing.js' type='text/javascript'%3E%3C/script%3E"));
   </script>
