fixed padding on listing page

--- a/src/content/pages/rentals.html
+++ b/src/content/pages/rentals.html
@@ -80,11 +80,11 @@ eleventyNavigation:
 </style>
 
 <!-- Mobile-only link ABOVE listings -->
-<div class="mobile-only-link">
+<!--<div class="mobile-only-link">
   <a href="https://sunseeker.appfolio.com/listings" target="_blank">
     View Desktop Version
   </a>
-</div>
+</div>-->
 
 <!-- Listing Embed -->
 <div id="listing-wrapper">
