--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -175,6 +175,18 @@ Based in Goodyear and serving the West Valley, we understand the local rental ma
 		</ul>
 	</div>
 </section>
+
+<section>
+    <h2>Why Choose Our Goodyear Property Management?</h2>
+    <ul>
+      <li>Serving all Goodyear neighborhoods, including Estrella Mountain Ranch and Palm Valley</li>
+      <li>Affordable management for single-family homes, condos, and townhomes</li>
+      <li>Expert tenant screening and fast leasing</li>
+      <li>Transparent pricing—no hidden fees</li>
+      <li>Trusted by 450+ property owners in Goodyear and the West Valley</li>
+    </ul>
+    <p>Looking for the best property management company in Goodyear, AZ? <a href="/contact">Contact us today</a> for a free rental analysis.</p>
+  </section>
                                 
 
 <!-- ============================================ -->
