--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@ eleventyNavigation:
         <div class="cs-content">
             <span class="cs-topper">Free Consultation</span>
             <h2 class="cs-title">How Much Will My Home Rent For?</h2>
-            <h4 class="cs-text">Fill out your info and we'll reach out to schedule a free rental evaluation.</h4>
+            <h4 class="cs-text">Please fill out your information below, and we’ll contact you to schedule a free rental evaluation. If you’re inquiring about one of our rental properties, kindly use the form on our Contact page instead.</h4>
         </div>
         <!--Form-->
 <form class="cs-form" id="cs-form-983" name="Property Management Inquiry Form"
