adjust phone number placeholder text

--- a/src/index.html
+++ b/src/index.html
@@ -208,7 +208,7 @@ eleventyNavigation:
     </label>
     <label class="cs-label">
         Phone Number
-        <input class="cs-input" required type="text" id="phone-587-983" name="phone" placeholder="Enter Your Phone Number">
+        <input class="cs-input" required type="text" id="phone-587-983" name="phone" placeholder="Phone Number">
     </label>
     <label class="cs-label">
         </br>
