adjusted data values for contact form

--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -54,8 +54,8 @@ permalink: 'contact/'
         <div class="custom-dropdown" tabindex="0">
           <div class="custom-selected">Please Select An Option</div>
           <ul class="custom-options">
-            <li data-value="Owner">I am a property owner looking for management services</li>
-            <li data-value="Tenant">I am looking to rent as a tenant</li>
+            <li data-value="I am a property owner looking for management services">I am a property owner looking for management services</li>
+            <li data-value="I am looking to rent as a tenant">I am looking to rent as a tenant</li>
             <li data-value="Other">Other</li>
           </ul>
           <input type="hidden" name="Inquiry Purpose" required>
