added netlify attribute to test page

--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -251,7 +251,7 @@ Interested in our property management services or want to discuss your rental pr
             <a href="mailto:kolby.sunseeker@gmail.com" class="cs-link">Email: kolby.sunseeker@gmail.com</a>
         </div>
         <!--Form-->
-        <form id="cs-form-486" name="Goodyear PM Form" method="post" action="https://kellis123.app.n8n.cloud/webhook-test/fd56a6c3-4fa0-45f1-94f3-2729412015e9">
+        <form id="cs-form-486" name="Goodyear PM Form" method="post" action="https://kellis123.app.n8n.cloud/webhook-test/fd56a6c3-4fa0-45f1-94f3-2729412015e9" netlify>
             <h3 class="cs-h3">Request More Information</h3>
             <label class="cs-label">
                 Name
