fix test page form formatting

--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -251,7 +251,8 @@ Interested in our property management services or want to discuss your rental pr
             <a href="mailto:kolby.sunseeker@gmail.com" class="cs-link">Email: kolby.sunseeker@gmail.com</a>
         </div>
         <!--Form-->
-        <form name="contact" method="POST" data-netlify="true" action="/thank-you">
+        <form id="cs-form-486" name="Goodyear PM Form" method="post" data-netlify="true" action="/thank-you">
+
             <h3 class="cs-h3">Request More Information</h3>
             <label class="cs-label">
                 Name
