Created finished goodyear landing page

--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -22,7 +22,7 @@ permalink: 'goodyear-property-management/'
     <div class="cs-container">
         <h1 class="cs-title">Goodyear Property Management Made Simple</h1>
         <p class="cs-text">
-Full-service leasing, thorough inspections, and responsive local experts for your Goodyear rental property.
+Full-service leasing, thorough inspections, and responsive local experts for your Goodyear rental property. Trusted by 450+ property owners in the West Valley.
         </p>
         <a href="https://calendly.com/sunseeker-rentals/property-management-call" target="_blank" class="cs-button-solid">Schedule A Phone Call</a>
     </div>
@@ -43,36 +43,38 @@ Full-service leasing, thorough inspections, and responsive local experts for you
     <ul class="cs-card-group">
         <li class="cs-item">
             <picture class="cs-icon">
-                <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Hero/toolbox.svg" alt="appliance" width="52" height="52" aria-hidden="true">
+                <img loading="lazy" decoding="async" src="/assets/svgs/magnifying-glass.svg" alt="property inspection icon" width="52" height="52" aria-hidden="true">
             </picture>
             <h2 class="cs-title">Comprehensive Property Inspections</h2>
             <p class="cs-text">
-Regular interior and exterior inspections to protect your investment and keep tenants happy.
+Regular interior and exterior inspections to protect your investment and keep tenants happy. We catch issues early which saves owners money.
             </p>
         </li>
         <li class="cs-item">
             <picture class="cs-icon">
-                <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Hero/buildings.svg" alt="appliance" width="52" height="52" aria-hidden="true">
+                <img loading="lazy" decoding="async" src="/assets/svgs/clipboard.svg" alt="leasing icon" width="52" height="52" aria-hidden="true">
             </picture>
-            <h2 class="cs-title">Expert Leasing</h2>
+            <h2 class="cs-title">Expert Leasing & Tenant Screening</h2>
             <p class="cs-text">
- We market your rental, screen tenants, and handle all leasing paperwork so you don’t have to.            </p>
-        </li>
-                <li class="cs-item">
-            <picture class="cs-icon">
-                <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Hero/buildings.svg" alt="appliance" width="52" height="52" aria-hidden="true">
-            </picture>
-            <h2 class="cs-title">Family Operated</h2>
-            <p class="cs-text">
- As a family-owned business, we pride ourselves on trust, integrity, and personal attention for every client.            </p>
+We market your rental on over 50 websites, screen tenants thoroughly, and handle all leasing paperwork. Our average time to lease is 30 days. 
+            </p>
         </li>
         <li class="cs-item">
             <picture class="cs-icon">
-                <img loading="lazy" decoding="async" src="https://csimg.nyc3.digitaloceanspaces.com/Hero/gear.svg" alt="appliance" width="52" height="52" aria-hidden="true">
+                <img loading="lazy" decoding="async" src="/assets/svgs/shield.svg" alt="family operated icon" width="52" height="52" aria-hidden="true">
+            </picture>
+            <h2 class="cs-title">Family Operated & Trusted</h2>
+            <p class="cs-text">
+As a family-owned business for 28+ years, we pride ourselves on trust, integrity, and personal attention for every client. We treat your property like our own.
+            </p>
+        </li>
+        <li class="cs-item">
+            <picture class="cs-icon">
+                <img loading="lazy" decoding="async" src="/assets/svgs/star.svg" alt="local expert icon" width="52" height="52" aria-hidden="true">
             </picture>
             <h2 class="cs-title">Local Goodyear Experts</h2>
             <p class="cs-text">
-Based in Goodyear and serving the West Valley, we understand the local rental market and community.
+Based in Goodyear and serving Estrella Mountain Ranch, Palm Valley, and all West Valley neighborhoods. We are very in touch with the current market .
             </p>
         </li>
     </ul>
@@ -97,12 +99,16 @@ Based in Goodyear and serving the West Valley, we understand the local rental ma
             <img class="cs-link-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Stats/play-yellow.svg" alt="play icon" width="110" height="110">
         </a>
 
-
-
 			<div class="cs-content">
 				<span class="cs-topper">How We Help</span>
 				<h2 class="cs-title">What's Included With Our Property Management Services</h2>
+                <p class="cs-text">
+                    Looking for the best property management company in Goodyear, AZ? We're the local experts who understand your neighborhood and your investment goals. Here's why you should choose us to be your Goodyear property manager:
+                </p>
             <ul id="list-1405" class="cs-ul">
+                <li class="cs-li">
+                    <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/orange-checkmark.svg" alt="checkmark" width="24" height="24">
+                    Transparent pricing—no hidden fees                </li>
                 <li class="cs-li">
                     <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/orange-checkmark.svg" alt="checkmark" width="24" height="24">
                     Thorough tenant screening and leasing services.
@@ -132,62 +138,49 @@ Based in Goodyear and serving the West Valley, we understand the local rental ma
                     Access to trusted local vendors and contractors.
                 </li>
             </ul>
-				<a href="" class="cs-button-solid">Start Your Journey Today</a>
+				<a href="/contact" class="cs-button-solid">Start Your Journey Today</a>
 			</div>
 		</div>
 		<ul class="cs-card-group">
-			<li class="cs-item">
-				<img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/therapy1.svg" alt="icon" width="120" height="120" />
-				<div class="cs-flex">
-					<h3 class="cs-h3">Availability 24/7</h3>
-					<p class="cs-item-text">
-                        Always ready to respond to any property concerns, emergencies, or requests.
-					</p>
-				</div>
-			</li>
-			<li class="cs-item">
-				<img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/therapy2.svg" alt="icon" width="120" height="120" />
-				<div class="cs-flex">
-					<h3 class="cs-h3">28+ Years of Experience</h3>
-					<p class="cs-item-text">
-                        Trusted, experienced property managers serving Goodyear and the West Valley.
-					</p>
-				</div>
-			</li>
-			<li class="cs-item">
-				<img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/therapy3.svg" alt="icon" width="120" height="120" />
-				<div class="cs-flex">
-					<h3 class="cs-h3">450 Properties Managed</h3>
-					<p class="cs-item-text">
-                        A proven track record of managing hundreds of rentals in the community.
-					</p>
-				</div>
-			</li>
-			<li class="cs-item">
-				<img class="cs-icon" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/therapy4.svg" alt="icon" width="120" height="120" />
-				<div class="cs-flex">
-					<h3 class="cs-h3">140+ Google Reviews</h3>
-					<p class="cs-item-text">
-                        Highly rated for reliability and service by satisfied property owners.
-					</p>
-				</div>
-			</li>
+					<li class="cs-item">
+			<img class="cs-icon" loading="lazy" decoding="async" src="/assets/images/clock.png" alt="icon" width="120" height="120" />
+			<div class="cs-flex">
+				<h3 class="cs-h3">Availability 24/7</h3>
+				<p class="cs-item-text">
+                    Always ready to respond to any property concerns, emergencies, or requests. Your peace of mind is our priority.
+				</p>
+			</div>
+		</li>
+		<li class="cs-item">
+			<img class="cs-icon" loading="lazy" decoding="async" src="/assets/images/experience.png" alt="icon" width="120" height="120" />
+			<div class="cs-flex">
+				<h3 class="cs-h3">28+ Years of Experience</h3>
+				<p class="cs-item-text">
+                    Trusted, experienced property managers serving Goodyear and the West Valley.
+				</p>
+			</div>
+		</li>
+		<li class="cs-item">
+			<img class="cs-icon" loading="lazy" decoding="async" src="/assets/images/properties.png" alt="icon" width="120" height="120" />
+			<div class="cs-flex">
+				<h3 class="cs-h3">450 Properties Managed</h3>
+				<p class="cs-item-text">
+                    A proven track record of managing hundreds of rentals in Goodyear, Estrella Mountain Ranch, and the West Valley.
+				</p>
+			</div>
+		</li>
+		<li class="cs-item">
+			<img class="cs-icon" loading="lazy" decoding="async" src="/assets/images/reviews.png" alt="icon" width="120" height="120" />
+			<div class="cs-flex">
+				<h3 class="cs-h3">140+ Google Reviews</h3>
+				<p class="cs-item-text">
+                    Highly rated for reliability and service by satisfied property owners. See what our clients say about us.
+				</p>
+			</div>
+		</li>
 		</ul>
 	</div>
 </section>
-
-<section>
-    <h2>Why Choose Our Goodyear Property Management?</h2>
-    <ul>
-      <li>Serving all Goodyear neighborhoods, including Estrella Mountain Ranch and Palm Valley</li>
-      <li>Affordable management for single-family homes, condos, and townhomes</li>
-      <li>Expert tenant screening and fast leasing</li>
-      <li>Transparent pricing—no hidden fees</li>
-      <li>Trusted by 450+ property owners in Goodyear and the West Valley</li>
-    </ul>
-    <p>Looking for the best property management company in Goodyear, AZ? <a href="/contact">Contact us today</a> for a free rental analysis.</p>
-  </section>
-                                
 
 <!-- ============================================ -->
 <!--                   Reviews                    -->
@@ -242,21 +235,26 @@ I can't imagine another company who could be more responsive and communicative.
 <section id="cs-contact-486">
     <div class="cs-container">
         <div class="cs-content">
-            <h2 class="cs-title">Get In Touch About <span class="cs-color">Property Management</span></h2>
+            <h2 class="cs-title">Looking for the best property management company in <span class="cs-color">Goodyear, AZ?</span></h2>
             <p class="cs-text">
 Interested in our property management services or want to discuss your rental property in Goodyear or the West Valley? Fill out the form and our team will reach out to answer your questions and explain how we can help maximize your investment.
             </p>
             <span class="cs-heading">Prefer to speak with us directly?</span>
-            <a href="tel:623-262-8584" class="cs-link">Phone: (623) 262-8584</a>
-            <a href="mailto:kolby.sunseeker@gmail.com" class="cs-link">Email: kolby.sunseeker@gmail.com</a>
+            <a href="tel:623-262-8584" class="cs-link">Phone: (623) 248-1929</a>
+            <a href="mailto:kolby.sunseeker@gmail.com" class="cs-link">Email: ken.sunseeker@gmail.com</a>
         </div>
         <!--Form-->
-        <form id="cs-form-486" name="Goodyear PM Form" method="post" data-netlify="true" action="/thank-you">
-
-            <h3 class="cs-h3">Request More Information</h3>
+        <form id="cs-form-486" name="Goodyear PM Form" method="post" data-netlify="true" data-netlify-recaptcha="true" action="/submission-complete/">
+            <input type="hidden" name="form-name" value="Goodyear PM Form">
+            
+            <h3 class="cs-h3">Contact Us Today For A Free Rental Analysis!</h3>
             <label class="cs-label">
-                Name
-                <input class="cs-input" required type="text" id="name-486" name="name" placeholder="Name">
+                First Name
+                <input class="cs-input" required type="text" id="first-name-486" name="first_name" placeholder="First Name">
+            </label>
+            <label class="cs-label">
+                Last Name
+                <input class="cs-input" required type="text" id="last-name-486" name="last_name" placeholder="Last Name">
             </label>
             <label class="cs-label">
                 Phone
@@ -264,16 +262,17 @@ Interested in our property management services or want to discuss your rental pr
             </label>
             <label class="cs-label">
                 Email
-                <input class="cs-input" required type="text" id="email-486" name="email" placeholder="Email">
+                <input class="cs-input" required type="email" id="email-486" name="email" placeholder="Email">
             </label>
-            <label class="cs-label">
-                Address or Approximate Location
-                <input class="cs-input" type="text" id="location-486" name="location" placeholder="e.g. Full address or nearest major cross streets">
+                         <label class="cs-label">
+                 Address or Approximate Location
+                 <input class="cs-input" type="text" id="location-486" name="location" placeholder="e.g. Full address or nearest major cross streets">
+             </label>
+             <label class="cs-label">
+                Tell Us About Your Property
+                <textarea class="cs-input cs-textarea" required name="Message" id="message-1333" placeholder="Write message..."></textarea>
             </label>
-            <label class="cs-label">
-                How many rental properties do you own?
-                <input class="cs-input" type="text" id="properties-486" name="properties" placeholder="e.g. 1, 2, multiple">
-            </label>
+             <div data-netlify-recaptcha="true"></div>
             <button class="cs-button-solid cs-submit" type="submit">Send Request</button>
         </form>
     </div>
