edited goodyear pm page button text

--- a/src/content/pages/goodyear-property-management.html
+++ b/src/content/pages/goodyear-property-management.html
@@ -273,7 +273,7 @@ Interested in our property management services or want to discuss your rental pr
                 <textarea class="cs-input cs-textarea" required name="Message" id="message-1333" placeholder="Write message..."></textarea>
             </label>
              <div data-netlify-recaptcha="true"></div>
-            <button class="cs-button-solid cs-submit" type="submit">Send Request</button>
+            <button class="cs-button-solid cs-submit" type="submit">Request Information</button>
         </form>
     </div>
 </section>
